--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="font_tools">140dp</dimen>
+    <dimen name="text_view_size">48sp</dimen>
 </resources>
